Websocket implementation complete. Need to formalize how `ChannelCapability` instances do requests and modify data on the other side, then get dossier working with these changes. There's also a small css bug in creativity (lines not wrapping when displaying a story's writeSet)

--- a/apps/creativity/style.css
+++ b/apps/creativity/style.css
@@ -594,7 +594,7 @@ Give all .button elements a consistent feel
   z-index: 1;
 }
 #ws > .write {
-  display: inline;
+  display: inline-block;
   white-space: pre-wrap;
   cursor: default;
   margin-right: 3px;
